# wecom-rpa-python

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run_demo.sh
config/: config.example.yaml  real_send_sentinel_daxiaochen.yaml  real_send_until_daxiaochen.yaml
data/: groups.example.csv  real_send_sentinel_50.csv  real_send_sentinel_9.csv  test_groups_1_11.csv  test_groups_1_9.csv
docs/: CALIBRATION.md  DESIGN.md  IMPLEMENTATION_TASK.md  SENTINEL_BOUNDARY_PLAN.md
docs/superpowers/plans/: 2026-05-25-resume-sentinel-ocr.md
packaging/: README_USER.md  check-ocr-models.bat  run-dry-run.bat  run-gui.bat  run-real-send-until-daxiaochen.bat
src/wecom_rpa/: __init__.py  calibration.py  config.py  forward_flow.py  groups.py  gui.py  main.py  models.py  powershell.py  safety.py  screen.py  storage.py  wecom_window.py
tests/: test_calibration.py  test_config_groups.py  test_forward_flow_controls.py  test_gui_support.py  test_safety_window_screen.py  test_storage_flow.py
tools/: build_release.ps1  capture_screen.ps1  capture_virtual_screen.ps1  capture_virtual_screen_dpi.ps1  check_release.ps1  focus_wxwork.ps1  install_packaging_deps.ps1  list_all_windows.ps1  list_windows.ps1  pyinstaller_entry.py  pyinstaller_gui_entry.py  verify_source_reselection.py  wecom_rect.ps1
